--- a/paint.html
+++ b/paint.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <canvas id="2dCanvas"  width="640" height="480"></canvas>
+        <canvas id="2dCanvas"  width="640" height="480" style="border:3px solid black"></canvas>
         
         <script src="scripts/main.js"></script>
     </body>
